--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -1,11 +1,10 @@
 #=====================================================================================
-# https://github.com/ophub/amlogic-s9xxx-openwrt
-# Description: Build OpenWrt for s905l3a using ImmortalWrt 24.10.2 with opkg
+# 适配s905l3a (aarch64_generic)架构的OpenWrt构建工作流
+# 架构说明：s905l3a属于ARMv8-A架构，对应aarch64_generic目标平台
 #=====================================================================================
 
-name: Build ImmortalWrt 24.10.2 (opkg) for s905l3a
+name: Build OpenWrt for s905l3a (aarch64_generic)
 
-# 触发条件：手动触发或仓库事件触发
 on:
   repository_dispatch:
   workflow_dispatch:
@@ -20,136 +19,331 @@ on:
           - s905l3a-cm311
           - s905l3a-m401a
       openwrt_kernel:
-        description: "内核版本（推荐最新）"
+        description: "内核版本"
         required: true
-        default: "6.12.y"
+        default: "5.15.y_6.1.y"
         type: choice
-        options:
-          - 6.12.y  # 最新内核
-          - 6.6.y
+          - 5.4.y
+          - 5.10.y
+          - 5.15.y
           - 6.1.y
+          - 6.6.y
+          - 6.12.y
+          - 5.4.y_5.10.y
+          - 5.15.y_6.1.y
+          - 6.1.y_6.12.y
+          - 6.1.y_6.6.y
+          - 6.6.y_6.12.y
       auto_kernel:
         description: "自动使用最新内核"
         required: false
         default: true
         type: boolean
+      kernel_repo:
+        description: "内核仓库"
+        required: true
+        default: "ophub/kernel"
+        type: choice
+          - ophub/kernel
+      kernel_usage:
+        description: "内核标签类型"
+        required: false
+        default: "stable"
+        type: choice
+          - stable
+          - flippy
+          - dev
+          - beta
 
 env:
-  TZ: Asia/Shanghai  # 调整时区为国内，避免时间同步问题
-  IMMORTALWRT_VERSION: "24.10.2"
-  TARGET_URL: "https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/targets/armsr/armv8/"
-  PACKAGES_URL: "https://downloads.immortalwrt.org/releases/${{ env.IMMORTALWRT_VERSION }}/packages/aarch64_generic/"
-  # 明确s905l3a的rootfs文件名（根据官方源实际文件名调整，这里是示例）
-  ROOTFS_PATTERN: "openwrt-${{ env.IMMORTALWRT_VERSION }}-armsr-armv8-generic-s905l3a-*-rootfs.tar.gz"
+  TZ: Asia/Shanghai
+  # 核心配置：使用官方immortalwrt的rootfs（匹配targets路径）
+  ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
+  TARGET_ARCH: "aarch64_generic"
+  # 关键修正：应用包仓库路径为aarch64_generic（与确认的路径一致）
+  PACKAGE_REPO_BASE: "https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_generic"
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-    if: github.event_name == 'workflow_dispatch' || github.event_name == 'repository_dispatch'  # 确保触发条件正确
-
+    permissions:
+      contents: write
     steps:
       - name: 检查代码仓库
         uses: actions/checkout@v4
 
-      - name: 初始化环境（修复依赖和权限）
-        id: init
+      - name: 初始化构建环境
         run: |
-          # 清理冗余资源，释放空间
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/hostedtoolcache/*
-          sudo swapoff -a && sudo rm -f /swapfile
-          
-          # 安装必要工具（确保opkg依赖完整）
+          # 安装基础工具
           sudo apt-get update -y
-          sudo apt-get install -y curl wget tar xz-utils binutils rsync unzip file
+          sudo apt-get install -y \
+            curl wget tar gzip xz-utils unzip build-essential \
+            qemu-user-static binfmt-support pv lvm2 xfsprogs \
+            net-tools iputils-ping jq
           
-          # 验证网络连通性（确保能访问官方源）
-          if ! curl -sSL --head ${{ env.TARGET_URL }} > /dev/null; then
-            echo "错误：无法访问ImmortalWrt官方源，请检查网络"
+          # 启用aarch64架构模拟
+          sudo update-binfmts --enable qemu-aarch64
+          sudo systemctl daemon-reload
+          
+          # 验证qemu配置
+          if ! which qemu-aarch64-static; then
+            echo "错误：未找到qemu-aarch64-static"
             exit 1
           fi
           
-          echo "status=success" >> $GITHUB_OUTPUT
+          # 设置时区
+          sudo timedatectl set-timezone "${TZ}"
 
-      - name: 创建临时存储（避免空间不足）
-        if: steps.init.outputs.status == 'success'
+      - name: 创建并挂载虚拟磁盘
         run: |
-          sudo mkdir -p /builder && sudo chmod 777 /builder
-          df -h /builder
+          # 计算可用空间（保留1G余量）
+          mnt_size=$(df -h /mnt | tail -1 | awk '{print $4}' | sed 's/[^0-9]//g')
+          root_size=$(df -h / | tail -1 | awk '{print $4}' | sed 's/[^0-9]//g')
+          mnt_size=$(( mnt_size > 0 ? mnt_size - 1 : 10 ))  # 至少10G
+          root_size=$(( root_size > 0 ? root_size - 4 : 20 ))  # 至少20G
+          
+          # 创建磁盘镜像
+          sudo truncate -s "${mnt_size}"G /mnt/mnt.img
+          sudo truncate -s "${root_size}"G /root.img
+          
+          # 关联到loop设备
+          sudo losetup /dev/loop6 /mnt/mnt.img
+          sudo losetup /dev/loop7 /root.img
+          
+          # 创建LVM逻辑卷
+          sudo pvcreate /dev/loop6 /dev/loop7
+          sudo vgcreate github /dev/loop6 /dev/loop7
+          sudo lvcreate -n runner -l 100%FREE github
+          
+          # 格式化XFS文件系统
+          sudo mkfs.xfs -f -i size=512 /dev/github/runner
+          
+          # 挂载到工作目录
+          sudo mkdir -p /builder
+          sudo mount -o defaults /dev/github/runner /builder
+          sudo chmod 777 /builder  # 确保权限可写
 
-      - name: 下载ImmortalWrt 24.10.2 rootfs（确保文件存在）
+      - name: 下载并验证rootfs
         id: download_rootfs
-        if: steps.init.outputs.status == 'success'
         working-directory: /builder
         run: |
-          echo "开始从官方源下载rootfs: ${{ env.TARGET_URL }}"
-          # 从官方源列表中精确匹配s905l3a的rootfs
-          rootfs_file=$(curl -s ${{ env.TARGET_URL }} | grep -oE "${{ env.ROOTFS_PATTERN }}" | head -n 1)
-          if [ -z "$rootfs_file" ]; then
-            echo "错误：未找到s905l3a的rootfs文件，检查URL或文件名格式"
+          # 创建工作目录
+          mkdir -p openwrt/rootfs
+          
+          # 下载rootfs
+          echo "开始下载rootfs: ${ROOTFS_URL}"
+          if ! sudo wget -c "${ROOTFS_URL}" -O openwrt/rootfs.tar.gz; then
+            echo "错误：rootfs下载失败"
             exit 1
           fi
           
-          # 下载文件并验证
-          wget -c ${{ env.TARGET_URL }}/$rootfs_file -O openwrt-rootfs.tar.gz
-          if [ ! -f "openwrt-rootfs.tar.gz" ] || [ $(du -b "openwrt-rootfs.tar.gz" | cut -f1) -lt 10485760 ]; then
-            echo "错误：rootfs下载失败或文件不完整"
+          # 验证文件存在
+          if [ ! -f "openwrt/rootfs.tar.gz" ]; then
+            echo "错误：rootfs文件不存在"
             exit 1
           fi
           
-          echo "rootfs_path=/builder/openwrt-rootfs.tar.gz" >> $GITHUB_OUTPUT
-          echo "status=success" >> $GITHUB_OUTPUT
+          # 解压rootfs
+          echo "解压rootfs..."
+          sudo tar -zxf openwrt/rootfs.tar.gz -C openwrt/rootfs
+          
+          # 处理可能的嵌套目录
+          rootfs_contents=$(ls openwrt/rootfs)
+          if [ $(echo "$rootfs_contents" | wc -l) -eq 1 ] && [ -d "openwrt/rootfs/$rootfs_contents" ]; then
+            sudo mv openwrt/rootfs/$rootfs_contents/* openwrt/rootfs/
+            sudo rmdir openwrt/rootfs/$rootfs_contents
+          fi
+          
+          # 提前创建必要系统目录
+          sudo mkdir -p openwrt/rootfs/var/lock
+          sudo chmod -R 777 openwrt/rootfs/var
+          
+          # 配置DNS（解决网络问题）
+          if [ -L "openwrt/rootfs/etc/resolv.conf" ]; then
+            sudo rm -f openwrt/rootfs/etc/resolv.conf
+          fi
+          sudo cp /etc/resolv.conf openwrt/rootfs/etc/resolv.conf
+          sudo chmod 777 openwrt/rootfs/etc/resolv.conf
+          
+          # 验证opkg是否存在
+          OPKG_PATH=$(sudo find openwrt/rootfs -name "opkg" | grep -E "/usr/bin/opkg|/bin/opkg" | head -n 1)
+          if [ -z "$OPKG_PATH" ]; then
+            echo "错误：未找到opkg工具"
+            sudo ls -la openwrt/rootfs/usr/bin
+            sudo ls -la openwrt/rootfs/bin
+            exit 1
+          fi
+          sudo chmod +x "$OPKG_PATH"
+          
+          echo "opkg_path=$OPKG_PATH" >> ${GITHUB_OUTPUT}
+          echo "status=success" >> ${GITHUB_OUTPUT}
 
-      - name: 配置opkg环境（直接集成到rootfs）
-        if: steps.download_rootfs.outputs.status == 'success'
+      - name: 检测rootfs中的晶晨宝盒
+        id: check_rootfs
+        if: ${{ steps.download_rootfs.outputs.status }} == 'success'
+        run: |
+          ROOTFS_DIR="/builder/openwrt/rootfs"
+          echo "===== 检测rootfs中的晶晨宝盒 ====="
+          
+          # 晶晨宝盒核心文件列表
+          amlogic_files=(
+            "/usr/sbin/amlogic-service"
+            "/etc/config/amlogic"
+            "/usr/bin/openwrt-install-amlogic"
+          )
+          amlogic_exists=true
+          for file in "${amlogic_files[@]}"; do
+            if [ ! -f "${ROOTFS_DIR}${file}" ] && [ ! -d "${ROOTFS_DIR}${file}" ]; then
+              echo "缺失晶晨宝盒组件: ${file}"
+              amlogic_exists=false
+            fi
+          done
+          
+          # 输出检测结果
+          if [ "$amlogic_exists" = true ]; then
+            echo "rootfs检测通过：包含晶晨宝盒"
+            echo "rootfs_status=success" >> ${GITHUB_OUTPUT}
+          else
+            echo "rootfs检测警告：缺失晶晨宝盒组件（将尝试后续安装）"
+            echo "rootfs_status=partial" >> ${GITHUB_OUTPUT}
+          fi
+
+      - name: 下载官方内核文件
+        id: download_kernel
         working-directory: /builder
         run: |
-          # 创建临时目录解压rootfs
-          mkdir -p temp_rootfs
-          tar -zxf openwrt-rootfs.tar.gz -C temp_rootfs
+          mkdir -p openwrt/kernel
+          echo "从官方仓库获取内核: ${{ inputs.kernel_repo }}"
           
-          # 下载并安装opkg（从官方packages源）
-          opkg_ipk=$(curl -s ${{ env.PACKAGES_URL }}/base/ | grep -oE "opkg_[0-9]+\.[0-9]+\-.*_aarch64_generic.ipk" | head -n 1)
-          wget -c ${{ env.PACKAGES_URL }}/base/$opkg_ipk -O opkg.ipk
-          ar x opkg.ipk data.tar.xz
-          tar -xJf data.tar.xz -C temp_rootfs
+          # 获取内核版本信息
+          if [[ "${{ inputs.auto_kernel }}" == "true" ]]; then
+            # 自动获取最新内核
+            latest_kernel=$(curl -s \
+                  -H "Accept: application/vnd.github+json" \
+                  -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+                  https://api.github.com/repos/${{ inputs.kernel_repo }}/releases?per_page=100 | \
+                  jq -r --arg KERNEL "${{ inputs.openwrt_kernel }}" \
+                  '[.[] | select(.tag_name | contains($KERNEL))] |
+                  sort_by(.published_at) |
+                  reverse |
+                  .[0].tag_name')
+            
+            if [[ -z "${latest_kernel}" || "${latest_kernel}" == "null" ]]; then
+              echo "无法获取最新内核版本，使用默认值"
+              latest_kernel="${{ inputs.openwrt_kernel }}"
+            fi
+            KERNEL_TAG="${latest_kernel}"
+          else
+            KERNEL_TAG="${{ inputs.openwrt_kernel }}"
+          fi
           
-          # 写入opkg源配置
-          mkdir -p temp_rootfs/etc/opkg
-          cat << EOF > temp_rootfs/etc/opkg/distfeeds.conf
-          src/gz immortalwrt_core ${{ env.TARGET_URL }}/packages
-          src/gz immortalwrt_base ${{ env.PACKAGES_URL }}/base
-          src/gz immortalwrt_luci ${{ env.PACKAGES_URL }}/luci
-          src/gz immortalwrt_packages ${{ env.PACKAGES_URL }}/packages
+          echo "使用内核版本: $KERNEL_TAG"
+          KERNEL_URL="https://github.com/${{ inputs.kernel_repo }}/releases/download/${KERNEL_TAG}/${KERNEL_TAG}.tar.gz"
+          echo "下载内核: ${KERNEL_URL}"
+          
+          if ! sudo wget -c "${KERNEL_URL}" -O openwrt/kernel/kernel.tar.gz; then
+            echo "错误：内核下载失败"
+            exit 1
+          fi
+          
+          # 验证内核文件
+          if [ ! -f "openwrt/kernel/kernel.tar.gz" ]; then
+            echo "错误：内核文件不存在"
+            exit 1
+          fi
+          
+          # 解压内核
+          sudo tar -zxf openwrt/kernel/kernel.tar.gz -C openwrt/kernel
+          echo "status=success" >> ${GITHUB_OUTPUT}
+          echo "kernel_tag=${KERNEL_TAG}" >> ${GITHUB_OUTPUT}
+
+      - name: 配置opkg源（适配官方架构路径）
+        if: ${{ steps.check_rootfs.outputs.rootfs_status != 'failure' && steps.download_kernel.outputs.status == 'success' }}
+        run: |
+          OPKG_CONF="/builder/openwrt/rootfs/etc/opkg/distfeeds.conf"
+          sudo mkdir -p $(dirname $OPKG_CONF)
+          
+          # 修正为官方正确的包仓库路径
+          sudo tee $OPKG_CONF << EOF
+          # 系统核心包（对应targets路径）
+          src/gz immortalwrt_core https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/packages
+          # 应用包（对应aarch64_generic路径）
+          src/gz immortalwrt_base ${PACKAGE_REPO_BASE}/base
+          src/gz immortalwrt_luci ${PACKAGE_REPO_BASE}/luci
+          src/gz immortalwrt_packages ${PACKAGE_REPO_BASE}/packages
+          src/gz immortalwrt_routing ${PACKAGE_REPO_BASE}/routing
+          src/gz immortalwrt_telephony ${PACKAGE_REPO_BASE}/telephony
           EOF
           
-          # 重新打包rootfs
-          rm -f openwrt-rootfs.tar.gz
-          tar -zcf openwrt-rootfs.tar.gz -C temp_rootfs .
-          rm -rf temp_rootfs
+          # 验证源配置
+          echo "已配置的opkg源："
+          cat $OPKG_CONF
 
-      - name: 打包OpenWrt镜像（调用官方工具）
-        id: package
-        if: steps.download_rootfs.outputs.status == 'success'
+      - name: 安装晶晨宝盒（如缺失）
+        if: ${{ steps.check_rootfs.outputs.rootfs_status == 'partial' && steps.download_kernel.outputs.status == 'success' }}
+        run: |
+          ROOTFS_DIR="/builder/openwrt/rootfs"
+          
+          # 挂载必要的系统目录
+          sudo mount -o bind /dev $ROOTFS_DIR/dev
+          sudo mount -o bind /dev/pts $ROOTFS_DIR/dev/pts
+          sudo mount -o bind /proc $ROOTFS_DIR/proc
+          sudo mount -o bind /sys $ROOTFS_DIR/sys
+          sudo mount -o bind /etc/resolv.conf $ROOTFS_DIR/etc/resolv.conf
+          
+          # 复制qemu模拟器
+          sudo cp /usr/bin/qemu-aarch64-static $ROOTFS_DIR/usr/bin/
+          sudo chmod +x $ROOTFS_DIR/usr/bin/qemu-aarch64-static
+          
+          # 配置DNS
+          sudo chroot $ROOTFS_DIR /bin/sh -c "echo 'nameserver 8.8.8.8' > /etc/resolv.conf"
+          sudo chroot $ROOTFS_DIR /bin/sh -c "echo 'nameserver 114.114.114.114' >> /etc/resolv.conf"
+          
+          # 更新包列表
+          echo "更新opkg包列表..."
+          retry=3
+          while [ $retry -gt 0 ]; do
+            if sudo chroot $ROOTFS_DIR /bin/sh -c "opkg update --no-check-certificate"; then
+              break
+            fi
+            retry=$((retry - 1))
+            echo "opkg update失败，剩余重试次数：$retry"
+            sleep 5
+          done
+          if [ $retry -eq 0 ]; then
+            echo "错误：opkg update最终失败"
+            exit 1
+          fi
+          
+          # 安装晶晨宝盒组件
+          echo "安装晶晨宝盒组件..."
+          sudo chroot $ROOTFS_DIR /bin/sh -c "opkg install --no-check-certificate \
+            luci-app-amlogic \
+            amlogic-utils \
+            openwrt-install-amlogic"
+          
+          # 清理挂载点
+          sudo umount $ROOTFS_DIR/etc/resolv.conf
+          sudo umount $ROOTFS_DIR/dev/pts
+          sudo umount $ROOTFS_DIR/dev
+          sudo umount $ROOTFS_DIR/proc
+          sudo umount $ROOTFS_DIR/sys
+          sudo rm -f $ROOTFS_DIR/usr/bin/qemu-aarch64-static
+
+      - name: 打包OpenWrt镜像
+        if: ${{ steps.check_rootfs.outputs.rootfs_status != 'failure' && steps.download_kernel.outputs.status == 'success' }}
         uses: ophub/amlogic-s9xxx-openwrt@main
         with:
-          openwrt_path: ${{ steps.download_rootfs.outputs.rootfs_path }}  # 确保路径正确
+          openwrt_path: /builder/openwrt/rootfs
           openwrt_board: ${{ inputs.openwrt_board }}
-          openwrt_kernel: ${{ inputs.openwrt_kernel }}
-          auto_kernel: ${{ inputs.auto_kernel }}
-          kernel_repo: "ophub/kernel"
-          kernel_usage: "stable"
+          openwrt_kernel: ${{ steps.download_kernel.outputs.kernel_tag }}
+          kernel_repo: ${{ inputs.kernel_repo }}
+          target_arch: ${{ env.TARGET_ARCH }}
+          debug: false
 
-      - name: 上传构建结果
-        if: steps.package.outputs.status == 'success'
-        uses: ncipollo/release-action@main
+      - name: 上传构建产物
+        uses: actions/upload-artifact@v4
         with:
-          tag: "ImmortalWrt_24.10.2_${{ inputs.openwrt_board }}_$(date +%Y%m%d)"
-          artifacts: "${{ env.PACKAGED_OUTPUTPATH }}/*"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          body: |
-            ### 设备：${{ inputs.openwrt_board }}
-            ### 内核：${{ inputs.openwrt_kernel }}
-            ### 包管理器：opkg
-            ### 官方源：
-            - [targets](${{ env.TARGET_URL }})
-            - [packages](${{ env.PACKAGES_URL }})
+          name: openwrt-s905l3a-${{ env.TARGET_ARCH }}-kernel-${{ steps.download_kernel.outputs.kernel_tag }}
+          path: ${{ env.PACKAGED_OUTPUTPATH }}/*
+          retention-days: 30
